# ambition_sfx_renderer

./: .gitignore  README.md  TODO.md  preview_generic_explosions.sh  pyproject.toml  setup.sh
LICENSES/: README.md
ambition_sfx_renderer/: __init__.py  __main__.py  audio.py  audit.py  cli.py  effects.py  errors.py  io.py  layers.py  paths.py  render.py  schema.py  waveform.py
ambition_sfx_renderer/backends/: __init__.py  noise_backend.py  pyfxr_backend.py  sample_backend.py
ambition_sfx_renderer_gpl/: __init__.py  dawdreamer_backend.py  pedalboard_fx.py  pyo_backend.py
docs/patch_notes/: PATCH_NOTES_duration_policy.md  PATCH_NOTES_effect_router_v5.md  PATCH_NOTES_import_soft_clip_v6.md  PATCH_NOTES_namespaced_draw_v8.md  PATCH_NOTES_parallel_namespaced.md  PATCH_NOTES_regen_draw_v9.md
patches/faust/: soft_saw.dsp  tone.dsp
sounds/: LICENSE
sounds/active/: README_menu_and_boss_coverage_r20260605_05.txt  README_story_character_sfx_r20260605_06.txt  README_story_character_sfx_r20260605_07.txt  ability.fire.charge.sfx.yaml  ability.fire.power_down.sfx.yaml  ability.fire.release.sfx.yaml  ability.heal.bloom.sfx.yaml  ability.heal.cast.sfx.yaml  ability.ice.charge.sfx.yaml  ability.ice.release.sfx.yaml  ability.ice.shatter.sfx.yaml  ability.lightning.arc_loop.sfx.yaml  ability.lightning.charge.sfx.yaml  ability.lightning.release.sfx.yaml  ability.shield.absorb_hit.sfx.yaml  ability.shield.down.sfx.yaml  ability.shield.up.sfx.yaml  ambient.cave.drip_loop.sfx.yaml  ambient.cove.harbor_loop.sfx.yaml  ambient.crowd.market_loop.sfx.yaml  (+382 more)
tests/: test_schema.py
